# OculiDoC

./: .editorconfig  .env.example  .gitattributes  .gitignore  NOTICE.md  README.md  pyproject.toml
docs/: OculiDoC_内置图片素材分类收集清单.txt  OculiDoC_总任务书.md  architecture.md
docs/roadmap/: gaze-heatmap-reporting.md
packaging/windows/: OculiDoC.spec
scripts/: build_windows.ps1  check.ps1  check_gaze_task_live.py  generate_windows_version_info.py  run_api.ps1  run_app.ps1
src/oculidoc/: __init__.py  __main__.py  app.py  app_paths.py  branding.py  config.py  image_library.py  lan_commands.py  lan_control.py  package_smoke.py  process_launch.py  speech_replay.py  task_configs.py  updater.py
src/oculidoc/api/: __init__.py  __main__.py  app.py  mobile_page.py
src/oculidoc/application/: __init__.py  clinical_trends.py  experiment_session_repository.py  experiment_session_service.py  gaze_report.py  gaze_task_session.py  patient_audit_repository.py  patient_repository.py  patient_service.py  (+3 more)
tests/: conftest.py  test_api.py  test_app_paths.py  test_auto_detect.py  test_binary_result_recording.py  test_binary_vertical.py  test_branding.py  test_camera_preview_controller.py  test_camera_preview_face_proposal_policy.py  test_camera_preview_review_policy.py  test_camera_preview_save_policy.py  test_clinical_trends.py  test_clinical_trends_ui.py  test_config.py  test_database_base.py  test_database_engine.py  test_database_mappers.py  test_database_models.py  test_database_runtime.py  test_database_session.py  test_desktop_database_integration.py  test_device_coordinator.py  test_device_diagnostics.py  test_device_settings_ui.py  test_experiment_recording.py  test_experiment_session.py  test_eye_crop_export.py  test_eye_observation_overlay.py  test_eye_observation_record.py  test_eye_region_proposal.py  test_eye_sample_naming.py  test_frame_identity.py  test_frozen_task_launch.py  test_gaze.py  test_gaze_collect_legacy.py  test_gaze_launch_guard.py  test_gaze_mouse_isolation.py  test_gaze_preflight.py  test_gaze_report.py  test_gaze_report_ui.py  (+48 more)
(+85 files in other folders)
