[build-system]
requires = ["setuptools>=83", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oculidoc"
version = "0.1.0.dev0"
description = "Eye-tracking assessment and interaction platform for disorders of consciousness."
readme = "README.md"
requires-python = ">=3.11,<3.12"
authors = [
  { name = "Etymodes" },
  { name = "TiantanDoC" }
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Healthcare Industry",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3.11",
  "Operating System :: Microsoft :: Windows"
]
dependencies = [
  "PySide6>=6.11,<7",
  "qasync>=0.28,<1",
  "fastapi>=0.139,<1",
  "uvicorn[standard]>=0.51,<1",
  "pydantic-settings>=2.14,<3",
  "SQLAlchemy>=2.0,<3",
  "alembic>=1.18,<2",
  "numpy>=2.4,<3",
  "pandas>=3.0,<4",
  "pyarrow>=24,<25",
  "opencv-python>=5,<6",
  "pyttsx3>=2.99,<3",
  "psutil>=7,<8",
  "segno>=1.6,<2"
]

[project.optional-dependencies]
research = [
  "scipy>=1.17,<2",
  "polars>=1.42,<2",
  "openpyxl>=3.1,<4",
  "xlsxwriter>=3.2,<4",
  "h5py>=3.16,<4",
  "matplotlib>=3.11,<4",
  "scikit-learn>=1.9,<2",
  "statsmodels>=0.14,<1"
]
dev = [
  "pytest>=9,<10",
  "pytest-qt>=4.5,<5",
  "pytest-asyncio>=1.4,<2",
  "pytest-cov>=7,<8",
  "ruff>=0.15,<1",
  "mypy>=2.2,<3",
  "pre-commit>=4,<5",
  "httpx2>=2.5,<3"
]
build = [
  "pyinstaller>=6.21,<7"
]

[project.scripts]
oculidoc = "oculidoc.__main__:main"
oculidoc-api = "oculidoc.api.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --maxfail=1"
qt_api = "pyside6"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.setuptools.package-data]
oculidoc = ["assets/*.ico", "assets/*.png"]
